# Rusev

./: .gitignore  Cargo.toml  README.md  flake.nix  notes.md  package-lock.json
.github/workflows/: ci.yml
.husky/: pre-commit
benches/: _classification_report_fast_strict.rs  classification_report.rs  classification_report_fast.rs  classification_report_fast_full.rs  classification_report_full.rs  classification_report_parallel.rs  classification_report_small.rs
data/: README.md  generate.py  hello.py  pyproject.toml
profiling/: Cargo.toml  README.md
profiling/seqeval_benchmarks/: bench.py  pyproject.toml
py_bindings/: Cargo.toml  pyproject.toml
py_bindings/benchmarking/: README.md  bench.py
py_bindings/py_src/: __init__.py  rusev.py
py_bindings/rusev_py/: __init__.py  rusev.py  rusev_py.pyi
py_bindings/src/: lib.rs
rusev/: Cargo.toml  License.txt  README.md  benchmark.sh  notes.md  profiling.sh
rusev/benches/: _classification_report_fast_lenient.rs  _classification_report_fast_strict.rs  classification_report_fast_full.rs  classification_report_full.rs  classification_report_parallel.rs
rusev/benchmarking/: Cargo.toml  README.md
rusev/benchmarking/seqeval_benchmarks/: pyproject.toml
rusev/data/: generate.sh  pyproject.toml
rusev/flat_array/: Cargo.toml
rusev/flat_array/src/: lib.rs
rusev/ner_parsing/: Cargo.toml
rusev/ner_parsing/src/: autodetect.rs  lib.rs  schemes.rs
rusev/profiling/: Cargo.toml
rusev/src/: config.rs  datastructure.rs  lib.rs  metrics.rs  reporter.rs
rusev/src/entity/: autodetect.rs  mod.rs
rusev/tests/: public_api.rs
rust-src/: Cargo.toml
rust-src/benches/: classification_report_fast_full.rs
rust-src/data/: README.md
rust-src/src/: metrics.rs  reporter.rs
rust-src/tests/: README.md  conlleval.pl  public_api.rs
src/: config.rs  datastructure.rs  lib.rs  metrics.rs  reporter.rs  schemes.rs
src/entity/: autodetect.rs  datastructure.rs  mod.rs  schemes.rs
tests/: public_api.rs
