[project]
name = "data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.1.0",
    "fire>=0.7.0",
    "jsonlines>=4.0.0",
    "torch>=2.5.1",
    "transformers>=4.46.3",
]

[tool.pyright]
typeCheckingMode = "basic"
