[package]
name = "profiling"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
rusev = {path = "../."}
serde = { version = "1.0.215", features = ["derive"] }
serde-jsonlines = "0.6.0"

[[bin]]
name = "profiling"
