[package]
name = "py_bindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "py_bindings"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.1", features = ["macros"] }
rusev = "0.4.0"
