[package]
name = "rusev"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[workspace]
members = [".", "profiling"]
exclude = ["py_bindings"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Simon Théorêt <simonteoret@hotmail.com"]
description = "Fast implementation of SeqEval, a sequence evaluation framework"
license-file = "UNLICENCE"
repository = "https://github.com/SimonTheoret/rusev"
keywords = ["Machine Learning", "SeqEval", "Sequence Evaluation", "NLP", "Evaluation", "NER"]
categories = ["science", "text-processing", "mathematics"]
rust-version = "1.80.1"

[lib]
# path = "src/lib.rs"

[dependencies]
ndarray = { version = "0.16.1", features = ["serde", "rayon", "blas"] }
num = "0.4.3"
ahash = "0.8.11"
ndarray-stats = "0.6.0"
itertools = "0.13.0"
serde = { version = "1.0.215", features = ["derive"] }
enum-iterator = "2.1.0"
either = "1.13.0"
rstest = "0.23.0"

[dev-dependencies]
quickcheck = "1.0.3"
criterion = { version = "0.5", features = ["html_reports"] }
serde-jsonlines = "0.6.0"
pprof = { version = "0.14.0", features = ["criterion", "flamegraph"] }

[[bench]]
name = "classification_report_full"
harness = false

# These two benchmarks have been deprecated in favor of the
# classification_report_fast_full, which is the union of the two benchmarks
# below.
# [[bench]]
# name = "classification_report_fast_lenient"
# harness = false
#
# [[bench]]
# name = "classification_report_fast_strict"
# harness = false

[[bench]]
name = "classification_report_fast_full"
harness = false

[[bench]]
name = "classification_report_parallel"
harness = false

[profile.release]
lto="fat"
codegen-units=1

# Reduction in performance when using these instructions:
# [build]
# rustflags = ["-C", "target-cpu=native"]
